Horizontal scrollbar now no longer appears

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@
   font-family:Verdana, Geneva, Tahoma, sans-serif;
   color: "#333";
   background-color: transparent;
+  box-sizing: border-box;
+  max-width: 100%;
 }
 
 #root{
@@ -21,8 +23,8 @@
 .App{
   display: flex;
   flex-direction: column;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 
 p{
@@ -119,7 +121,7 @@ p{
   background-image: url("/src/Images/Panorama.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   z-index: -1;
 }
@@ -128,7 +130,8 @@ p{
   flex-grow: 1;
   display: flex;
   position: relative;
-  width: 100vw;
+  width: 100%;
+  max-width: 100vw;
   box-sizing: border-box;
 }
 
@@ -233,6 +236,8 @@ code {
   margin-left: var(--content-margin);
   margin-right: var(--content-margin);
   background-color: transparent;
+  max-width: 100%;
+  box-sizing: border-box;
 }
 
 .portfolioBlock p{
@@ -250,10 +255,15 @@ code {
 .portfolioList{
   display: flex;
   flex-direction: row;
-  width: 100%;
+  max-width: 100%;
   margin-top: 8px;
   margin-left: var(--content-margin);
   margin-right: var(--content-margin);
+}
+
+.portfolioPage{
+  max-width: 100%;
+  box-sizing: border-box;
 }
 
 .portfolioItem{
